--- a/Websites/whale website.HTML
+++ b/Websites/whale website.HTML
@@ -2,7 +2,7 @@
 	<body>
 		<h1>Whales say!</h1>
 			<p>Hello World!</p>	
-		<img src="Images/breaching_whale.jpg">
+		<img src="breaching_whale.jpg">
 
 	</body>
 </head>
