--- a/Websites/whale website.HTML
+++ b/Websites/whale website.HTML
@@ -1,7 +1,8 @@
 <head>
 	<body>
 		<h1>Whales say!</h1>
-			<p>Hello World!</p>	
+		<p>Hello World!</p></br>
+		<p>This is an addition</p>
 		<img src="breaching_whale.jpg">
 
 	</body>
