These are some changes to the webpage

--- a/Websites/index.html
+++ b/Websites/index.html
@@ -23,17 +23,22 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
+<div id="title" style= "text-align:right;">
+  <div>
+    <img src="~/Users/reggienora/Downloads/small-udacity-logo.png" style="float:left;">
+  </div>
   <h1>Reggie Nora</h1>
   <h3>Front End Ninja</h3>
   <hr>
-
+</div>
+<br>
   <p>Welcome to my portfolio. This is where I will take the skills I aquire and I will showcase them in a piece that will demonstrate my skills as a Web Developer.</p> <br>
 
   <p>Right now, it is a bit primitive but, rest assured, it will only get better as I learn more. Here are a few things I have learned so far working to get my Nanodegree:</p>
 
   <ul>
-    <li></li>
-    <li></li>
+    <li>HTML</li>
+    <li>CSS</li>
     <li></li>
   </ul>
   <!--script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
