Added notes for changes that neeed to be made. Also, changed to HTML5.

--- a/Websites/Portfolio/index.html
+++ b/Websites/Portfolio/index.html
@@ -1,45 +1,46 @@
 <!doctype html>
-<html class="no-js" lang="English">
+<html class="no-js" lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <title>Reggie's Portfolio</title>
-  <meta name="description" content="A portfolio all about me!">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="smaller.css">
+  <head>
+    <meta charset="utf-8">
+    <title>Reggie's Portfolio</title>
+    <meta name="description" content="A portfolio all about me!">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="smaller.css">
 
-</head>
+  </head>
 
-<body>
-  
-<div>
-  <div>
-    <img src="small-udacity-logo.png" id="small-udacity-logo">
-  </div>
-  <div id="title">
-  <h1>Reggie Nora</h1>
-  <h3>Front End Ninja</h3>
-  </div>
-  <hr>
-  </div>
-  <p>Welcome to my portfolio. This is where I will take the skills I aquire and I will showcase them in a piece that will demonstrate my skills as a Web Developer.</p> <br>
+  <main>
 
-<div id="body-picture">
-  <img src="body-picture.jpeg">
-</div>
+    <section>
+      <section>
+        <img src="small-udacity-logo.png" id="small-udacity-logo">
+      </section>
+      <div id="title">
+      <h1>Reggie Nora</h1>
+      <h3>Front End Ninja</h3>
+      </div>
+      <hr>
 
-<div id="summary">
-  <p>Right now, it is a bit primitive but, rest assured, it will only get better as I learn more. Here are a few things I have learned so far working to get my Nanodegree:</p>
-</div>
-<div>
-  <ul>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>And more soon to come...</li>
-  </ul>
-</div>  
- 
-</body>
+      <p>Welcome to my portfolio. This is where I will take the skills I aquire and I will showcase them in a piece that will demonstrate my skills as a Web Developer.</p> <br>
+
+    <div id="body-picture">
+      <img src="body-picture.jpeg">
+    </section>
+
+    <div id="summary">
+      <p>Right now, it is a bit primitive but, rest assured, it will only get better as I learn more. Here are a few things I have learned so far working to get my Nanodegree:</p>
+    </div>
+    <div>
+      <ul>
+        <!-- this needs images on both <li> elements-->
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>And more soon to come...</li>
+      </ul>
+    </div>
+
+  </main>
 
 </html>
