Changed file structure and added notes for work later on.

--- a/Websites/Portfolio/HTML/index.html
+++ b/Websites/Portfolio/HTML/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html class="no-js" lang="en">
+<!--Add Bootstrap to this project to make it have a better setup. See example here to help complete this: https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_default&stacked=h -->
 
   <head>
     <meta charset="utf-8">
     <title>Reggie's Portfolio</title>
     <meta name="description" content="A portfolio all about me!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="smaller.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/smaller.css">
 
   </head>
 
@@ -15,7 +16,7 @@
 
     <section>
       <section>
-        <img src="small-udacity-logo.png" id="small-udacity-logo">
+        <img src="../img/small-udacity-logo.png" id="small-udacity-logo">
       </section>
       <div id="title">
       <h1>Reggie Nora</h1>
@@ -26,7 +27,7 @@
       <p>Welcome to my portfolio. This is where I will take the skills I aquire and I will showcase them in a piece that will demonstrate my skills as a Web Developer.</p> <br>
 
     <div id="body-picture">
-      <img src="body-picture.jpeg">
+      <img src="../img/body-picture.jpeg">
     </section>
 
     <div id="summary">
