--- a/Websites/Portfolio/HTML/index.html
+++ b/Websites/Portfolio/HTML/index.html
@@ -7,13 +7,15 @@
     <title>Reggie's Portfolio</title>
     <meta name="description" content="A portfolio all about me!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/smaller.css">
+    <!--link rel="stylesheet" href="../css/style.css"-->
+    <!--link rel="stylesheet" href="../css/smaller.css"-->
     <link rel="stylesheet" href="../css/bootstrap-responsive.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
 
   </head>
 
   <main>
+    <div class="navbar navbar-inverse">
 
     <section>
       <section>
@@ -23,6 +25,7 @@
       <h1>Reggie Nora</h1>
       <h3>Front End Ninja</h3>
       </div>
+    </div>
       <hr>
 
       <p>Welcome to my portfolio. This is where I will take the skills I aquire and I will showcase them in a piece that will demonstrate my skills as a Web Developer.</p> <br>
